# maptr-study

./: .gitignore  LICENSE  README.md  pyproject.toml
src/datasets/: dataset.py
src/models/detectors/: maptr.py
src/models/layers/: decoder.py  encoder.py  lss.py
src/models/losses/: loss.py  matcher.py
tools/: debug_overfit.py  inference.py  train.py  verify_full_pipeline.py
